@@ -28,6 +28,12 @@ COMMITERS
 Do not forget to update this page on the wiki when making changes relevant to developers:
 http://docs.joomla.org/index.php?title=Version_1.6_Developer_Notes
 
+24-Jan-2009 Anthony Ferrara
+ + Added onBeforeRender Trigger
+ + Added onAfterCacheRender Trigger
+ + Added parse method to JDocument and JDocumentHTML
+ ^ Moved all "system" triggers inside of JApplication/children
+
 24-Jan-2009 Andrew Eddie
  ^ Move text files to /installation/ folder
  
